crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-multi_embeddings_megascience_basic_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]"
        ]
      },
      "primary_key": {
        "id": 189
      },
      "_score": 0.7
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "\\[\n(2y)^2 = (2 \\times 2)^2 = 4^2 = \\boxed{16}\n\\]"
        ]
      },
      "primary_key": {
        "id": 212
      },
      "_score": 0.68
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      },
      "_score": 0.68
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "\\[\n2x^2 = 2(-3)^2 = 2(9) = \\boxed{18}\n\\]"
        ]
      },
      "primary_key": {
        "id": 195
      },
      "_score": 0.67
    }
  ]
}
