crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-multi_embeddings_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "This is an example of a $\\boxed{\\text{rate}}$ because it compares two unlike denominate numbers (erasers and pencils)."
      },
      "primary_key": {
        "id": 543
      },
      "score": 0.63
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "The mode is $\\boxed{16}$ because it appears three times, which is more frequently than any other number in the data set."
      },
      "primary_key": {
        "id": 988
      },
      "score": 0.61
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "Since 5,067,322 is divisible by 2 (its last digit is even), it is a $\\boxed{\\text{composite}}$ number."
      },
      "primary_key": {
        "id": 96
      },
      "score": 0.6
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "When dividing a number by 10, the decimal point moves one place to the left. Therefore, \\(0.023 \\div 10 = \\boxed{0.0023}\\)."
      },
      "primary_key": {
        "id": 1118
      },
      "score": 0.6
    }
  ]
}
