crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_basic.snap
---
source: crates/runtime/tests/search/mod.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 189,
    "answer": "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]",
    "trunc(vector_search(qs, Utf8(\"second\"), answer).score,Int64(3))": 0.705
  },
  {
    "id": 212,
    "answer": "\\[\n(2y)^2 = (2 \\times 2)^2 = 4^2 = \\boxed{16}\n\\]",
    "trunc(vector_search(qs, Utf8(\"second\"), answer).score,Int64(3))": 0.69
  },
  {
    "id": 1277,
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "trunc(vector_search(qs, Utf8(\"second\"), answer).score,Int64(3))": 0.688
  },
  {
    "id": 195,
    "answer": "\\[\n2x^2 = 2(-3)^2 = 2(9) = \\boxed{18}\n\\]",
    "trunc(vector_search(qs, Utf8(\"second\"), answer).score,Int64(3))": 0.674
  }
]
