crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by _score desc, id LIMIT 4"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                     |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer).id ASC NULLS LAST, fetch=4                                                                                                                                                   |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer).id, vector_search(qs, Utf8("secondary"), answer).answer, trunc(vector_search(qs, Utf8("secondary"), answer)._score, Int64(3)) AS _score                                                       |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer) projection=[id, answer, _score], full_filters=[vector_search(qs, Utf8("secondary"), answer).subject != Utf8("math")]                                                                         |
| physical_plan | SortPreservingMergeExec: [_score@2 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                   |
|               |   SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                       |
|               |     ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(_score@2, 3) as _score]                                                                                                                                                                  |
|               |       SortExec: TopK(fetch=1000), expr=[_score@2 DESC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                          |
|               |         ProjectionExec: expr=[id@0 as id, answer@1 as answer, 1 - cosine_distance(CAST(query_vector() AS List(Field { data_type: Float32, nullable: true })), CAST(answer_embedding@3 AS List(Field { data_type: Float32, nullable: true }))) as _score] |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                           |
|               |             FilterExec: subject@2 != math                                                                                                                                                                                                                |
|               |               SchemaCastScanExec                                                                                                                                                                                                                         |
|               |                 BytesProcessedExec                                                                                                                                                                                                                       |
|               |                   DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                                                                      |
|               |                                                                                                                                                                                                                                                          |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
