crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                               |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id DESC NULLS FIRST, fetch=4                                                                                                                              |
|               |   Projection: vector_search(qs, Utf8("second"), answer).id, trunc(vector_search(qs, Utf8("second"), answer)._score, Int64(3)) AS _score                                                                                            |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[id, _score]                                                                                                                                                   |
| physical_plan | SortExec: TopK(fetch=4), expr=[_score@1 DESC, id@0 DESC], preserve_partitioning=[false]                                                                                                                                            |
|               |   ProjectionExec: expr=[id@0 as id, trunc(_score@1, 3) as _score]                                                                                                                                                                  |
|               |     SortExec: TopK(fetch=1000), expr=[_score@1 DESC NULLS LAST], preserve_partitioning=[false]                                                                                                                                     |
|               |       ProjectionExec: expr=[id@0 as id, 1 - cosine_distance(CAST(query_vector() AS List(Field { data_type: Float32, nullable: true })), CAST(answer_embedding@1 AS List(Field { data_type: Float32, nullable: true }))) as _score] |
|               |         SchemaCastScanExec                                                                                                                                                                                                         |
|               |           BytesProcessedExec                                                                                                                                                                                                       |
|               |             DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                                                      |
|               |                                                                                                                                                                                                                                    |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
