crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                         |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).subject                                                                                                                                                                                |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, fetch=4                                                                                                                                                           |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[subject, _score]                                                                                                                                                        |
| physical_plan | ProjectionExec: expr=[subject@0 as subject]                                                                                                                                                                                                  |
|               |   SortExec: TopK(fetch=4), expr=[_score@1 DESC], preserve_partitioning=[false]                                                                                                                                                               |
|               |     SortExec: TopK(fetch=1000), expr=[_score@1 DESC NULLS LAST], preserve_partitioning=[false]                                                                                                                                               |
|               |       ProjectionExec: expr=[subject@0 as subject, 1 - cosine_distance(CAST(query_vector() AS List(Field { data_type: Float32, nullable: true })), CAST(answer_embedding@1 AS List(Field { data_type: Float32, nullable: true }))) as _score] |
|               |         SchemaCastScanExec                                                                                                                                                                                                                   |
|               |           BytesProcessedExec                                                                                                                                                                                                                 |
|               |             DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                                                                |
|               |                                                                                                                                                                                                                                              |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
